# Smart-Split-Bill-Assistant

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
modules/: controller.py  styles.py  utils.py
modules/data/: assignment_data.py  base.py  receipt_data.py  report_data.py  session_data.py
modules/models/: base.py  donut.py  gemini.py  layoutlmv3.py  loader.py  moondream_model.py
modules/views/: view_1_receipt_upload.py  view_2_assign_participants.py  view_3_report.py  view_setting.py
