[project]
name = "smart-split-bill-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "babel==2.14.0",
    "langchain==0.1.0",
    "langchain-google-genai==0.0.9",
    "pytesseract==0.3.10",
    "pandas==2.2.0",
    "pillow==10.2.0",
    "sentencepiece==0.1.99",
    "streamlit==1.34.0",
    "torch==2.2.0",
    "transformers==4.37.0",
    "typing_extensions==4.9.0",
    "xmltodict==0.13.0",
]
